--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@ html,body{
 .front img,.back img{
   width:100%;height:100%;object-fit:cover;
 }
-.back{transform:rotateY(180deg)}
-.back img{filter:blur(10px) brightness(.7)}
-
+.back{
+  transform:rotateY(180deg);
+}
+.back img{
+  filter:blur(10px) brightness(.7);
+}
 .panel-text{
-  position:absolute;
-  z-index:2;
+  position:absolute;z-index:2;
   padding:22px;
   font-size:clamp(14px,4vw,18px);
   line-height:1.6;
@@ -125,22 +127,26 @@ html,body{
   </div>
 </section>
 
-<!-- SCREEN 2 (UNCHANGED) -->
+<!-- SCREEN 2 -->
 <section id="screen2" class="screen">
 <div class="bg" style="background-image:url('assets/SCREEN3.jpeg')"></div>
 <div class="panel-container">
+
 <div class="panel" id="p2-1"><div class="panel-inner">
 <div class="face front"><img src="assets/ima1.jpeg"></div>
 <div class="face back"><img src="assets/ima1.jpeg"><div class="panel-text">Text</div></div>
 </div></div>
+
 <div class="panel" id="p2-2"><div class="panel-inner">
 <div class="face front"><img src="assets/ima2.jpeg"></div>
 <div class="face back"><img src="assets/ima2.jpeg"><div class="panel-text">Text</div></div>
 </div></div>
+
 <div class="panel" id="p2-3"><div class="panel-inner">
 <div class="face front"><img src="assets/ima3.jpeg"></div>
 <div class="face back"><img src="assets/ima3.jpeg"><div class="panel-text">Text</div></div>
 </div></div>
+
 </div>
 </section>
 
@@ -153,7 +159,7 @@ html,body{
 </div>
 </section>
 
-<!-- ✅ SCREEN 4 (FIXED) -->
+<!-- ✅ SCREEN 4 — ONLY FRONT TEXT ADDED -->
 <section id="screen4" class="screen">
 <div class="bg" style="background-image:url('assets/SCREEN5.jpeg')"></div>
 <div class="panel-container">
@@ -163,42 +169,39 @@ html,body{
   <img src="assets/ONE.jpeg">
   <div class="panel-text">WHY I LOVE YOU</div>
 </div>
-<div class="face back">
-  <img src="assets/ONE.jpeg">
-  <div class="panel-text">I love you because you never give up on us.</div>
-</div>
-</div></div>
+<div class="face back"><img src="assets/ONE.jpeg">
+<div class="panel-text">I love you because you never give up on us.</div>
+</div></div></div>
 
 <div class="panel" id="p4-2"><div class="panel-inner">
 <div class="face front">
   <img src="assets/TWO.jpeg">
   <div class="panel-text">MY PROMISES TO YOU</div>
 </div>
-<div class="face back">
-  <img src="assets/TWO.jpeg">
-  <div class="panel-text">I promise I'll never let a girl come between us, my loyalty and heart....</div>
+<div class="face back"><img src="assets/TWO.jpeg">
+<div class="panel-text">
+I promise I'll never let a girl come between us,
+my loyalty and heart....
 </div>
-</div></div>
+</div></div></div>
 
 <div class="panel" id="p4-3"><div class="panel-inner">
 <div class="face front">
   <img src="assets/THREE.jpeg">
   <div class="panel-text">THE FUTURE I WANT WITH YOU</div>
 </div>
-<div class="face back">
-  <img src="assets/THREE.jpeg">
-  <div class="panel-text">
-    We get married with our parents' permission and work hard.
-    We have our own house.
-    Every morning we wake up beside each other.
-  </div>
+<div class="face back"><img src="assets/THREE.jpeg">
+<div class="panel-text">
+We get married with our parents' permission and work hard.
+We have our own house.
+Every morning we wake up beside each other.
 </div>
-</div></div>
+</div></div></div>
 
 </div>
 </section>
 
-<!-- SCREEN 5 (UNCHANGED) -->
+<!-- SCREEN 5 -->
 <section id="screen5" class="screen">
 <div class="slide show" style="background-image:url('assets/intro.jpeg')"></div>
 <div class="wrap">
@@ -213,15 +216,6 @@ document.querySelectorAll('.screen').forEach(s=>s.classList.remove('active'));
 document.getElementById(id).classList.add('active');
 }
 function start(){bgm.play().catch(()=>{});show('screen2');}
-function setup(panels,next,delay){
-let c=0;
-panels.forEach(p=>p.onclick=()=>{
-if(p.classList.contains('flipped'))return;
-p.classList.add('flipped');c++;
-if(c===panels.length){setTimeout(()=>show(next),delay);}
-});
-}
-setup([p4-1,p4-2,p4-3],'screen5',3000);
 </script>
 
 </body>
